# DOOM

./: AUTHORS  ChangeLog  INSTALL  Makefile  Makefile.in  NEWS  README  acconfig.h  config.cache  config.h  config.h.in  config.status  config.sub  configure  configure.in  run.sh
data/: Makefile  Makefile.in
doc/: Makefile  Makefile.in
src/: Makefile  Makefile.am  Makefile.in  am_map.c  d_client.c  d_deh.c  d_main.c  d_server.c  doomdata.h  doomdef.h  drawcol.s  f_finale.c  g_game.c  hu_stuff.c  i_sound.h  i_system.h  i_video.h  l_joy.c  l_main.c  l_sound.c  l_sound_sdl.c  l_soundgen.c  l_system.c  l_udp.c  l_video_sdl.c  l_video_svgalib.c  l_video_trans.c  l_video_trans.h  l_video_x.c  lprintf.c  lprintf.h  m_fixed.h  m_menu.c  m_misc.c  makefile.pre-ac  old.Makefile  p_enemy.c  p_inter.c  p_map.c  p_saveg.c  (+21 more)
src/bak/: l_video_sdl.c  l_video_trans.c
